# mosaic

./: .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CRITERIA.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PORTFOLIO_GUIDE.md  PROJECT_SPEC.md  README.md  RUN_PROMPT.md  SYSTEM_PROMPT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  examples.md
docs/ai-development/: run-prompt.md  system-prompt.md
docs/project/: acceptance-criteria.md  specification.md
examples/outputs/2x2/labels/: mosaic_0000.txt  (+1 more)
examples/synthetic_dataset/: classes.txt  summary.json
examples/synthetic_dataset/labels/: synthetic_001.txt  synthetic_002.txt  synthetic_003.txt  synthetic_004.txt  synthetic_005.txt  synthetic_006.txt  synthetic_008.txt  synthetic_009.txt  synthetic_010.txt  synthetic_011.txt  synthetic_012.txt  synthetic_013.txt  synthetic_015.txt  synthetic_016.txt  synthetic_017.txt  synthetic_018.txt  synthetic_019.txt  synthetic_020.txt  synthetic_022.txt  synthetic_023.txt  synthetic_024.txt  synthetic_025.txt  synthetic_026.txt  synthetic_027.txt  synthetic_029.txt
scripts/: benchmark.py
src/yolo_mosaic/: __init__.py  annotations.py  cli.py  dataset.py  geometry.py  image_ops.py  models.py  mosaic.py  reporting.py  services.py  synthetic.py  validation.py  visualization.py  web.py
tests/: test_annotations.py  test_cli.py  test_dataset.py  test_geometry.py  test_mosaic_2x2.py  test_mosaic_3x3.py  test_reporting.py  test_services.py  test_synthetic.py  test_validation.py  test_visualization.py  test_web.py
(+1 files in other folders)
