[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-mosaic-toolkit"
version = "0.1.0"
description = "Deterministic YOLO mosaic generation with annotation validation, visualization, CLI, and web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "buyukfuat52" }]
keywords = ["computer-vision", "yolo", "mosaic", "annotation", "opencv"]
dependencies = [
    "gradio>=4.44",
    "numpy>=1.24,<2.5",
    "opencv-python>=4.8",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
yolo-mosaic = "yolo_mosaic.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/yolo_mosaic"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["cv2", "gradio", "gradio.*"]
ignore_missing_imports = true
follow_imports = "skip"
